--- a/assessment.html
+++ b/assessment.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="twitter:card" content="summary">
+    <meta charset="UTF-8"/>
+    <meta name="twitter:card" content="summary"/>
     <meta 
       property="og:url"
       content="https://tonki1621.github.io/assessment/assessment.html"
-      >
-    <meta property="og:title" content="あなたのいいところ診断">
+      />
+    <meta property="og:title" content="あなたのいいところ診断"/>
     <meta 
       property="og:description"
       content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"
-      >
+      />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>tonki1621が作ったあなたのいいところ診断</title>
 </head>
